@@ -1,200 +1,129 @@
 package com.kama.notes.service.impl;
 
 import com.kama.notes.mapper.MessageMapper;
-import com.kama.notes.mapper.UserMapper;
 import com.kama.notes.model.base.ApiResponse;
 import com.kama.notes.model.base.EmptyVO;
-import com.kama.notes.model.base.PageVO;
-import com.kama.notes.model.dto.message.MessageQueryParams;
+import com.kama.notes.model.dto.message.MessageDTO;
 import com.kama.notes.model.entity.Message;
 import com.kama.notes.model.entity.User;
+import com.kama.notes.model.enums.message.MessageType;
 import com.kama.notes.model.vo.message.MessageVO;
-import com.kama.notes.model.vo.message.UnreadCountByType;
+import com.kama.notes.scope.RequestScopeData;
 import com.kama.notes.service.MessageService;
+import com.kama.notes.service.UserService;
 import com.kama.notes.utils.SecurityUtils;
-import lombok.RequiredArgsConstructor;
-import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.http.HttpStatus;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.BeanUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Objects;
 
 /**
  * 消息服务实现类
  */
 @Service
-@RequiredArgsConstructor
+@Slf4j
 public class MessageServiceImpl implements MessageService {
 
-    private final MessageMapper messageMapper;
-    private final UserMapper userMapper;
-    private final RedisTemplate<String, Object> redisTemplate;
-    private static final Logger log = LoggerFactory.getLogger(MessageServiceImpl.class);
+    @Autowired
+    private MessageMapper messageMapper;
 
-    // Redis键前缀
-    private static final String UNREAD_COUNT_KEY = "message:unread:count:";
-    private static final String UNREAD_COUNT_BY_TYPE_KEY = "message:unread:type:";
-    private static final String MESSAGE_CACHE_KEY = "message:detail:";
+    @Autowired
+    private UserService userService;
+
+    @Autowired
+    private RequestScopeData requestScopeData;
 
     @Override
-    public ApiResponse<Integer> createMessage(Long receiverId, Long senderId, String type, Integer targetId, String content) {
-        log.info("开始创建消息通知: receiverId={}, senderId={}, type={}, targetId={}, content={}", 
-                receiverId, senderId, type, targetId, content);
-        
+    public Integer createMessage(MessageDTO messageDTO) {
         try {
             Message message = new Message();
-            message.setReceiverId(receiverId);
-            message.setSenderId(senderId);
-            message.setType(type);
-            message.setTargetId(targetId);
-            message.setContent(content);
-            message.setIsRead(false);
-            message.setCreatedAt(LocalDateTime.now());
-            message.setUpdatedAt(LocalDateTime.now());
+            BeanUtils.copyProperties(messageDTO, message);
 
-            int rows = messageMapper.insert(message);
-            log.info("消息通知创建结果: messageId={}, 影响行数={}", message.getMessageId(), rows);
-            
-            // 清除相关缓存
-            clearMessageCache(receiverId);
-            
-            return ApiResponse.success(message.getMessageId());
+            if (messageDTO.getContent() == null) {
+                message.setContent("");
+            }
+
+            return messageMapper.insert(message);
         } catch (Exception e) {
-            log.error("创建消息通知失败", e);
-            return ApiResponse.error(HttpStatus.INTERNAL_SERVER_ERROR.value(), "创建消息通知失败: " + e.getMessage());
+            throw new RuntimeException("创建消息通知失败: " + e.getMessage());
         }
     }
 
     @Override
-    public ApiResponse<PageVO<MessageVO>> getMessages(MessageQueryParams params) {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
-        
-        // 获取总记录数
-        int total = messageMapper.countByParams(currentUserId, params);
-        
-        // 计算偏移量
-        int offset = (params.getPage() - 1) * params.getPageSize();
-        
-        // 获取当前页数据
-        List<Message> messages = messageMapper.selectByParams(currentUserId, params, offset);
+    public ApiResponse<List<MessageVO>> getMessages() {
 
-        // 转换为VO对象
-        List<MessageVO> messageVOs = messages.stream().map(message -> {
-            MessageVO vo = new MessageVO();
-            vo.setMessageId(message.getMessageId());
-            vo.setType(message.getType());
-            vo.setTargetId(message.getTargetId());
-            vo.setContent(message.getContent());
-            vo.setIsRead(message.getIsRead());
-            vo.setCreatedAt(message.getCreatedAt());
+        Long currentUserId = requestScopeData.getUserId();
 
-            // 从缓存获取发送者信息
-            User sender = getUserFromCache(message.getSenderId());
-            if (sender != null) {
-                MessageVO.SimpleUserVO senderVO = new MessageVO.SimpleUserVO();
-                senderVO.setUserId(sender.getUserId());
-                senderVO.setUsername(sender.getUsername());
-                senderVO.setAvatarUrl(sender.getAvatarUrl());
-                vo.setSender(senderVO);
+        // 获取用户所有的消息对象
+        List<Message> messages = messageMapper.selectByUserId(currentUserId);
+
+        List<Long> senderIds = messages.stream().map(Message::getSenderId).toList();
+
+        // 将 message 专成 messageVO
+        Map<Long, User> userMap = userService.getUserMapByIds(senderIds);
+
+        List<MessageVO> messageVOS = messages.stream().map(message -> {
+            MessageVO messageVO = new MessageVO();
+            BeanUtils.copyProperties(message, messageVO);
+
+            // 设置发送者信息
+            MessageVO.Sender sender = new MessageVO.Sender();
+            sender.setUserId(message.getSenderId());
+            sender.setUsername(userMap.get(message.getSenderId()).getUsername());
+            sender.setAvatarUrl(userMap.get(message.getSenderId()).getAvatarUrl());
+            messageVO.setSender(sender);
+
+            // 设置 target 信息
+            if (!Objects.equals(message.getType(), MessageType.SYSTEM)) {
+                MessageVO.Target target = new MessageVO.Target();
+                target.setTargetId(message.getTargetId());
+                target.setTargetType(message.getTargetType());
+                // TODO: 获取评论/点赞 对应的 note 的 question 信息
+
             }
 
-            return vo;
-        }).collect(Collectors.toList());
+            return messageVO;
+        }).toList();
 
-        // 创建分页结果
-        PageVO<MessageVO> pageVO = PageVO.of(messageVOs, params.getPage(), params.getPageSize(), total);
-        return ApiResponse.success(pageVO);
+        return ApiResponse.success(messageVOS);
     }
 
     @Override
     public ApiResponse<EmptyVO> markAsRead(Integer messageId) {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
+        Long currentUserId = requestScopeData.getUserId();
         messageMapper.markAsRead(messageId, currentUserId);
-        
-        // 清除相关缓存
-        clearMessageCache(currentUserId);
-        
+        return ApiResponse.success();
+    }
+
+    @Override
+    public ApiResponse<EmptyVO> markAsReadBatch(List<Integer> messageIds) {
+        Long currentUserId = requestScopeData.getUserId();
+        messageMapper.markAsReadBatch(messageIds, currentUserId);
         return ApiResponse.success();
     }
 
     @Override
     public ApiResponse<EmptyVO> markAllAsRead() {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
+        Long currentUserId = requestScopeData.getUserId();
         messageMapper.markAllAsRead(currentUserId);
-        
-        // 清除相关缓存
-        clearMessageCache(currentUserId);
-        
         return ApiResponse.success();
     }
 
     @Override
     public ApiResponse<EmptyVO> deleteMessage(Integer messageId) {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
+        Long currentUserId = requestScopeData.getUserId();
         messageMapper.deleteMessage(messageId, currentUserId);
         return ApiResponse.success();
     }
 
     @Override
     public ApiResponse<Integer> getUnreadCount() {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
-        String cacheKey = UNREAD_COUNT_KEY + currentUserId;
-        
-        // 尝试从缓存获取
-        Integer count = (Integer) redisTemplate.opsForValue().get(cacheKey);
-        if (count == null) {
-            // 缓存未命中，从数据库查询
-            count = messageMapper.countUnread(currentUserId);
-            // 将结果存入缓存，设置5分钟过期
-            redisTemplate.opsForValue().set(cacheKey, count, 5, TimeUnit.MINUTES);
-        }
-        
+        Long currentUserId = requestScopeData.getUserId();
+        Integer count = messageMapper.countUnread(currentUserId);
         return ApiResponse.success(count);
     }
-
-    @Override
-    public ApiResponse<List<UnreadCountByType>> getUnreadCountByType() {
-        Long currentUserId = SecurityUtils.getCurrentUserId();
-        String cacheKey = UNREAD_COUNT_BY_TYPE_KEY + currentUserId;
-        
-        // 尝试从缓存获取
-        @SuppressWarnings("unchecked")
-        List<UnreadCountByType> result = (List<UnreadCountByType>) redisTemplate.opsForValue().get(cacheKey);
-        if (result == null) {
-            // 缓存未命中，从数据库查询
-            result = messageMapper.countUnreadByType(currentUserId);
-            // 将结果存入缓存，设置5分钟过期
-            redisTemplate.opsForValue().set(cacheKey, result, 5, TimeUnit.MINUTES);
-        }
-        
-        return ApiResponse.success(result);
-    }
-
-    /**
-     * 从缓存获取用户信息
-     */
-    private User getUserFromCache(Long userId) {
-        String cacheKey = "user:detail:" + userId;
-        User user = (User) redisTemplate.opsForValue().get(cacheKey);
-        if (user == null) {
-            user = userMapper.findById(userId);
-            if (user != null) {
-                redisTemplate.opsForValue().set(cacheKey, user, 30, TimeUnit.MINUTES);
-            }
-        }
-        return user;
-    }
-
-    /**
-     * 清除用户相关的消息缓存
-     */
-    private void clearMessageCache(Long userId) {
-        redisTemplate.delete(UNREAD_COUNT_KEY + userId);
-        redisTemplate.delete(UNREAD_COUNT_BY_TYPE_KEY + userId);
-    }
-} 
+}
